--- a/css/styles.css
+++ b/css/styles.css
@@ -1,275 +1,496 @@
 @charset "utf-8";
 /* CSS Document */
-
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+* {
+  box-sizing: border-box;
+}
+*:not(img),
+*:after,
+*:before {
+  box-sizing: border-box;
 }
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+  line-height: 1.5;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+body {
+  display: block;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+ul,
+li {
+  color: #333;
 }
 a {
-	color: orange;
-	text-decoration: none;
+  color: #02b3e4 !important;
+  text-decoration: none;
 }
-a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+a:hover,
+a:focus {
+  color: #3397db;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+a img {
+  border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 5px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+td,
+th,
+p {
+  font-size: 0.875em !important;
 }
+footer p {
+  margin: 0;
+}
+footer p a {
+  font-size: 0.85 !important;
+}
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
 #maincontent {
-  background-color: #f3f3f3;
-  min-height: 100%;
+  min-height: 100vh;
+  max-width: 100vw;
+  position: fixed;
+  scroll-behavior: auto;
+  align-items: flex-end;
 }
 #footer {
-  background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
+  position: fixed;
   letter-spacing: 1px;
-  padding: 25px;
-  text-align: center;
   text-transform: uppercase;
-}
-/* ====================== Navigation ====================== */
-nav {
+  bottom: 0;
+  z-index: 1000;
+  right: 0;
   width: 100%;
-  height: 80px;
+  text-align: center;
+  color: #ccc;
   background-color: #252831;
-  text-align:center;
+  margin: 0 !important;
+  font-size: 10px !important;
+}
+
+/* ====================== Navigation ====================== */
+.map-title {
+  display: block;
+  justify-content: center;
+  position: fixed;
+  z-index: 1000;
+  margin: 0 auto;
+  left: 10px;
+  right: 0;
+  top: 10px;
+}
+nav {
+  background-color: #252831;
+  width: 408px;
 }
 nav h1 {
-  margin: auto;
+  padding: 10px;
+  margin: 0;
 }
 nav h1 a {
-  color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
+  font-weight: 400;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  margin: 0;
+  padding: 10px 40px 16px;
+  list-style: none;
+  width: 100%;
+  font-size: 14px;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
+  color: #fff;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+#breadcrumb li + li:before {
+  padding: 8px;
+  color: black;
+  content: "|\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
-  width: 100%;
-  background-color: #ccc;
+  height: 100vh;
+  width: 100vw;
+}
+
+.leaflet-top,
+.leaflet-bottom {
+  position: fixed !important;
 }
 /* ====================== Restaurant Filtering ====================== */
+.map-filter {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  width: 408px;
+  position: absolute;
+  z-index: 1000;
+  top: 100px;
+  bottom: 20px;
+  left: 10px;
+  z-index: 1001;
+}
+#map-btn-search {
+  display: none;
+}
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
+  display: block;
+  position: relative;
+  background-color: #252831;
 }
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
-  font-weight: normal;
+  color: #fff;
+  font-weight: 400;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px;
+  padding-top: 10px;
+  letter-spacing: 1px;
+  width: 100%;
+  margin-bottom: 0;
 }
 .filter-options select {
   background-color: white;
-  border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
+  border: none;
+  font-family: Roboto, Arial, sans-serif;
   height: 35px;
-  letter-spacing: 0;
   margin: 10px;
-  padding: 0 10px;
-  width: 200px;
 }
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 0 10px 0;
   text-align: center;
+  overflow-y: auto;
+  bottom: 60px;
 }
 #restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  bottom: 30px;
   text-align: left;
-  width: 270px;
+  border-bottom: solid 0.5px #ececec;
 }
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
   display: block;
-  margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  width: 100px;
+  float: right;
 }
 #restaurants-list li h1 {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
+  margin: 0;
+  font-family: Roboto, Arial, sans-serif;
+  /* font-size: 14pt; */
+  font-weight: 400;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
-  text-transform: uppercase;
 }
 #restaurants-list p {
+  color: #757575;
   margin: 0;
-  font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
-  color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
+  display: block !important;
+  position: inherit;
+  color: #027fa1 !important;
+  margin: 6px 0;
+  height: 100%;
 }
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
+  position: relative;
+  background-color: #252831;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 100%;
   position: fixed;
   right: 0;
-  top: 80px;
-  width: 50%;
+  top: 0;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
 #restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
+  font-family: Roboto, Arial, sans-serif;
   letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 100%;
+  width: calc(100% + 20px);
+  margin-left: -10px;
 }
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  margin: 0 0 20px;
+  color: #757575;
 }
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-	width: 90%;
+  color: #757575;
+  width: 100%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+#restaurant-details {
+  display: block;
+  background: #fff;
+  position: fixed;
+  width: 408px;
+  left: 10px;
+  z-index: 1000;
+  overflow-y: scroll;
+  bottom: 20px;
+  top: 90px;
 }
+#restaurant-container,
 #reviews-container {
-  padding: 30px 40px 80px;
+  width: 100%;
+  padding: 0 10px;
+}
+#restaurant-container:not(:first-child) {
+  padding: 5px;
+}
+#restaurant-container i,
+#reviews-container > i {
+  float: left;
+  line-height: 1.5;
+  margin-right: 5px;
+  width: 20px;
 }
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+  font-weight: 400;
+  letter-spacing: 1pt;
+  line-height: 1.1;
+  margin-top: 15px;
 }
 #reviews-list {
   margin: 0;
   padding: 0;
+  height: 300px;
+  bottom: 10px;
 }
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 10px 20px;
   position: relative;
-  width: 85%;
+  color: #666;
 }
 #reviews-list li p {
   margin: 0 0 10px;
+  color: #666;
+  white-space: pre-wrap;
+}
+#reviews-list li span {
+  color: #02b3e4;
+}
+#restaurant-hours {
+  width: 90%;
 }
 #restaurant-hours td {
   color: #666;
+  vertical-align: top !important;
+}
+/* ====================== Scrollbar ====================== */
+::-webkit-scrollbar-track {
+  background: #ccc;
+}
+/* ====================== Skip Link ====================== */
+.skip-link {
+  position: absolute;
+  left: 0;
+  top: -100px;
+  background: #bf1722;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+}
+.skip-link:focus {
+  top: 0;
+}
+/* ======================== Tablet ======================= */
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 12px !important;
+  }
+
+  td,
+  th,
+  p {
+    font-size: 1em !important;
+  }
+
+  .map-title nav,
+  .map-filter,
+  .filter-options,
+  #restaurant-details {
+    width: 300px;
+  }
+
+  .map-filter {
+    top: 70px;
+    bottom: 20px;
+    position: fixed;
+  }
+
+  footer {
+    height: 15px;
+  }
+
+  footer a strong {
+    font-size: 0.85 !important;
+  }
+
+  .filter-options select {
+    margin: 5px;
+  }
+
+  #restaurants-list {
+    padding: 0 10px 0;
+    bottom: 20px;
+  }
+}
+
+/* ======================== Mobile ======================= */
+@media screen and (max-width: 480px) {
+  .map-title nav {
+    width: calc(100vw - 20px);
+    text-align: center;
+  }
+
+  .map-title nav h1 a {
+    letter-spacing: 6px;
+  }
+
+  #map-btn-search {
+    width: 100%;
+    display: flex;
+    position: fixed;
+    bottom: 50px;
+    z-index: 1000;
+  }
+  #btn-search {
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    padding: 15px;
+    background-color: #252831;
+    color: #ececec;
+    outline: none;
+  }
+  .map-filter {
+    position: fixed;
+    top: unset;
+    width: calc(100% - 20px);
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    bottom: 35px;
+    height: 300px;
+  }
+  .filter-options {
+    width: 100%;
+  }
+  .filter-options select {
+    background-color: white;
+    border: none;
+    width: calc(40% - 20px);
+  }
+  #restaurant-details {
+    width: calc(100% - 20px);
+    height: 300px;
+    top: unset;
+  }
+  #restaurants-list {
+    display: flex;
+    list-style: outside none none;
+    text-align: center;
+    overflow-y: auto;
+    object-fit: cover;
+    bottom: 10px;
+    margin: unset;
+    padding: 5px;
+    background: none;
+    height: 100%;
+  }
+  #restaurants-list li {
+    min-width: 165px;
+    display: flex;
+    flex-direction: column;
+    border: none;
+    padding-right: 5px;
+    margin: 0;
+  }
+
+  #restaurants-list p {
+    font-size: 0.875em !important;
+  }
+
+  #restaurants-list li a {
+    text-transform: capitalize;
+    position: relative;
+    margin: 0;
+  }
+
+  #restaurants-list .restaurant-img {
+    margin: 0;
+    padding: 0;
+    object-fit: contain;
+    width: 100%;
+    max-width: 165px;
+  }
+  #restaurants-list li h1 {
+    margin: 5px 0;
+  }
+  /* ====================== Visuality ====================== */
+  .item-hiden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
 }
